custom-resources/00-grafana-demo/argo-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
  - name: gateway
    namespace: httpbin
    sectionName: https
  hostnames: 
  - 'argocd.ky-rafaels.com'
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argocd-server
      port: 80
