custom-resources/00-grafana-demo/hubble-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  parentRefs:
  - name: gateway
    namespace: ingress-gtw
    sectionName: https
  hostnames: 
  - 'hubble.ky-rafaels.com'
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: hubble-ui
      port: 80
